<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:id="@+id/itemID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/itemName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/h_v_t_n"
        android:textSize="18sp" />


    <TextView
        android:id="@+id/itemNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/s_i_n_tho_i"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/itemEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="18sp" />


</LinearLayout>