<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/form_user_application"
        android:textSize="24sp"
        android:textStyle="bold" />


    <EditText
        android:id="@+id/formTxtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_form"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/formTxtNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/mobile_number_form"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <EditText
        android:id="@+id/formTxtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/email_address_form"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="horizontal">

        <Button
            android:id="@+id/formBtnUpdate"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/save_update_form"
            style="?android:attr/buttonBarButtonStyle" />


        <Button
            android:id="@+id/formBtnViewAll"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:text="@string/view_all_form"
            style="?android:attr/buttonBarButtonStyle" />


    </LinearLayout>

</LinearLayout>