<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    tools:context=".activity.AddActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/user_application"
        android:textSize="24sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/formTxtName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:minHeight="48dp"
        android:autofillHints="" />

    <EditText
        android:id="@+id/formTxtNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobile_number"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <EditText
        android:id="@+id/formTxtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColorHint="#757575"
        android:autofillHints="" />
<LinearLayout
    android:layout_width="match_parent"
    android:orientation="horizontal"

    android:layout_height="wrap_content">
    <Button
        android:id="@+id/formBtnAdd"
        android:layout_width="0dp"
        android:layout_margin="10dp"
        android:layout_weight="1"
        android:text="@string/add_user"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle" />
    <Button
        android:id="@+id/formBtnViewAll"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_margin="10dp"
        android:text="@string/view_all"
        android:layout_height="wrap_content"
        style="?android:attr/buttonBarButtonStyle" />


</LinearLayout>



</LinearLayout>